# 2D_platformer_mario_style

./: .gitignore  Actors.py  Camera.py  Component.py  Editor.py  Game.py  GameObjects.py  Overlay.py  README.md  Window.py  World.py  actors.py  camera.py  component.py  constants.py  editor.py  game.py  game_objects.py  main.py  overlay.py  pyproject.toml  window.py  world.py  worldTest.wd
.devcontainer/: Dockerfile  asound.conf  devcontainer.json  setup.sh
V1/: Actors.py  Camera.py  Component.py  Game.py  GameObjects.py  Window.py  World.py  worldTest.wd
V2/: Actors.py  Animation.py  Component.py  GameObjects.py  Overlay.py  Window.py  World.py
Worlds/: worldTest.wd
src/: actors.py  animation.py  camera.py  component.py  constants.py  editor.py  game.py  game_objects.py  main.py  overlay.py  window.py  world.py
src/_old/: actors.py  animation.py  camera.py  component.py  constants.py  editor.py  game.py  game_objects.py  overlay.py  window.py  world.py
src/engine/: config.py  event.py  window.py
src/engine/commons/: core.py  window.py
src/engine/scene/: base.py
src/engine/ui/: base.py
src/engine/window/: event.py  window.py
